// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast should render properly with danger variant 1`] = `
<div>
  <div
    class="sc-gsTCUz hmyRbi"
  >
    <div
      class="sc-dlfnbm SYrnl"
      title="Title"
    >
      <span
        class="sc-bdfBwQ eCEmam"
      >
        Title
      </span>
    </div>
    <div
      class="sc-hKgILt UimoD"
    >
      <span
        class="sc-bdfBwQ hOunjh"
      >
        Message
      </span>
    </div>
    <div
      class="sc-eCssSg dHVTKx"
      title="Title"
    />
    <div
      class="sc-jSgupP jVqlaK"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with info variant 1`] = `
<div>
  <div
    class="sc-gsTCUz hmyRbi"
  >
    <div
      class="sc-dlfnbm SYrnl"
      title="Title"
    >
      <span
        class="sc-bdfBwQ eCEmam"
      >
        Title
      </span>
    </div>
    <div
      class="sc-hKgILt UimoD"
    >
      <span
        class="sc-bdfBwQ hOunjh"
      >
        Message
      </span>
    </div>
    <div
      class="sc-eCssSg fFZEbq"
      title="Title"
    />
    <div
      class="sc-jSgupP jVqlaK"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with success variant 1`] = `
<div>
  <div
    class="sc-gsTCUz hmyRbi"
  >
    <div
      class="sc-dlfnbm SYrnl"
      title="Title"
    >
      <span
        class="sc-bdfBwQ eCEmam"
      >
        Title
      </span>
    </div>
    <div
      class="sc-hKgILt UimoD"
    >
      <span
        class="sc-bdfBwQ hOunjh"
      >
        Message
      </span>
    </div>
    <div
      class="sc-eCssSg rPXZZ"
      title="Title"
    />
    <div
      class="sc-jSgupP jVqlaK"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render properly with warning variant 1`] = `
<div>
  <div
    class="sc-gsTCUz hmyRbi"
  >
    <div
      class="sc-dlfnbm SYrnl"
      title="Title"
    >
      <span
        class="sc-bdfBwQ eCEmam"
      >
        Title
      </span>
    </div>
    <div
      class="sc-hKgILt UimoD"
    >
      <span
        class="sc-bdfBwQ hOunjh"
      >
        Message
      </span>
    </div>
    <div
      class="sc-eCssSg jeqfcD"
      title="Title"
    />
    <div
      class="sc-jSgupP jVqlaK"
    >
      X
    </div>
  </div>
</div>
`;

exports[`Toast should render title and message text 1`] = `
<div>
  <div
    class="sc-gsTCUz hmyRbi"
  >
    <div
      class="sc-dlfnbm SYrnl"
      title="Title"
    >
      <span
        class="sc-bdfBwQ eCEmam"
      >
        Title
      </span>
    </div>
    <div
      class="sc-hKgILt UimoD"
    >
      <span
        class="sc-bdfBwQ hOunjh"
      >
        Message
      </span>
    </div>
    <div
      class="sc-eCssSg rPXZZ"
      title="Title"
    />
    <div
      class="sc-jSgupP jVqlaK"
    >
      X
    </div>
  </div>
</div>
`;
